# time_recipt

./: .gitignore  README.md  convert.cjs  index.html  package-lock.json  package.json  tailwind.config.js
.cache/clang-module-cache/249JOXEOO68CD/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  (+46 more)
distraction-receipt/: .gitignore  convert.cjs  index.html  package-lock.json  package.json
distraction-receipt/public/: onboarding-1.html  onboarding-2.html  tw.html  weekly.html
distraction-receipt/src/: App.tsx  index.css
distraction-receipt/src-tauri/: Cargo.toml  tauri.conf.json
public/: onboarding-1.html  onboarding-2.html  onboarding-3.html  onboarding-4.html  tw.html  weekly.html
scripts/: build-custom-dmg.sh  build-custom-zip.sh  generate-dmg-background.swift
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DailyReceiptCard.tsx  Onboarding2Card.tsx  Onboarding3Card.tsx  Onboarding4Card.tsx  OnboardingCard.tsx  OnboardingLanguageCard.tsx  SettingsCard.tsx  WeeklyReceiptCard.tsx  time_recipt.code-workspace
src/screens/: DailyReceipt.tsx  Onboarding1.tsx  Onboarding2.tsx  Onboarding3.tsx  Onboarding4.tsx  OnboardingLanguage.tsx  Settings.tsx  WeeklyReceipt.tsx
(+14 files in other folders)
