[package]
name = "distraction-receipt"
version = "0.1.0"
description = "Distraction Receipt - Track your daily productivity"
authors = ["Janna Wrot"]
edition = "2021"

[lib]
name = "distraction_receipt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
url = "2"
core-foundation-sys = "0.8"
base64 = "0.22"
